[package]
name = "anyrender"
description = "2D Canvas abstraction"
version = "0.6.0"
documentation = "https://docs.rs/anyrender"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
kurbo = { workspace = true }
peniko = { workspace = true }
raw-window-handle = { workspace = true }
