[package]
name = "anyrender_skia"
description = "Skia backend for anyrender"
version = "0.1.0"
documentation = "https://docs.rs/anyrender_skia"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[features]
log_frame_times = ["debug_timer/enable"]

[dependencies]
anyrender = { workspace = true }

debug_timer = { workspace = true }
kurbo = { workspace = true }
peniko = { workspace = true }
raw-window-handle = { workspace = true }
futures-intrusive = { workspace = true }
pollster = { workspace = true }
rustc-hash = { workspace = true }
skia-safe = { version = "0.89.1", features = ["gl", "vulkan", "metal"]}
gl = "0.14.0"
ash = "^0.38.0"
vulkano = "0.35.2"
glutin = { version = "0.32.3", features = ["default", "wgl", "egl"] }


[target.'cfg(target_os = "macos")'.dependencies]
metal-rs = { package = "metal", version = "0.24.0" }
raw-window-handle = "0.6.0"
objc = "0.2.7"
cocoa = "0.26.0"
core-graphics-types = "0.1.1"
foreign-types-shared = "0.1.1"