[package]
name = "anyrender_skia"
description = "Skia backend for anyrender"
version = "0.1.0-beta.2"
documentation = "https://docs.rs/anyrender_skia"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[features]
log_frame_times = ["debug_timer/enable"]
vulkan = ["skia-safe/vulkan"]

[dependencies]
anyrender = { workspace = true }
debug_timer = { workspace = true }
kurbo = { workspace = true }
peniko = { workspace = true }
raw-window-handle = { workspace = true }
futures-intrusive = { workspace = true }
pollster = { workspace = true }
rustc-hash = { workspace = true }
skia-safe = { version = "0.89.1", features = ["gl", "pdf", "textlayout"]}
oaty = "0.1"
gl = "0.14.0"
ash = "^0.38.0"
ash-window = "0.13.0"
glutin = { version = "0.32.3", features = ["default", "wgl", "egl"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.3", default-features = false }
objc2-core-foundation = { version = "0.3.2", default-features = false }
objc2-metal = { version = "0.3.2", default-features = false, features = ["MTLCommandBuffer", "MTLCommandQueue", "MTLDrawable", "MTLPixelFormat"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["objc2-quartz-core", "NSView"] }
objc2-quartz-core = { version = "0.3.2", default-features = false, features = ["objc2-core-foundation", "objc2-metal", "CAMetalLayer"] }
skia-safe = { version = "0.89.1", features = ["metal"] }
