[package]
name = "anyrender_svg"
description = "Render SVGs with anyrender"
version = "0.6.0"
documentation = "https://docs.rs/anyrender-svg"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyrender = { workspace = true }
peniko = { workspace = true }
kurbo = { workspace = true }
usvg = { workspace = true }
image = { workspace = true, default-features = false, optional = true }
thiserror = "2"

[features]
default = ["image_format_png", "image_format_gif", "image_format_jpeg", "image_format_webp"]
image = ["dep:image"]
image_format_png = ["image", "image/png"]
image_format_jpeg = ["image", "image/jpeg"]
image_format_gif = ["image", "image/gif"]
image_format_webp = ["image", "image/webp"]
