[package]
name = "anyrender_vello"
description = "Vello backend for anyrender"
version = "0.6.0"
documentation = "https://docs.rs/anyrender_vello"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[features]
log_frame_times = ["debug_timer/enable"]

[dependencies]
anyrender = { workspace = true }
wgpu_context = { workspace = true }

debug_timer = { workspace = true }
kurbo = { workspace = true }
peniko = { workspace = true }
vello = { workspace = true }
raw-window-handle = { workspace = true }
wgpu = { workspace = true }
futures-intrusive = { workspace = true }
pollster = { workspace = true }
rustc-hash = { workspace = true }
