[package]
name = "anyrender_vello_cpu"
description = "vello_cpu backend for anyrender"
version = "0.6.0"
documentation = "https://docs.rs/anyrender_vello_cpu"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[features]
pixels_window_renderer = ["dep:pixels"]
softbuffer_window_renderer = ["dep:softbuffer"]
multithreading = ["vello_cpu/multithreading"]
log_frame_times = ["debug_timer/enable"]

[dependencies]
anyrender = { workspace = true }
debug_timer = { workspace = true }
kurbo = { workspace = true }
peniko = { workspace = true }

# WindowRenderer backends
softbuffer = { workspace = true, optional = true }
pixels = { workspace = true, optional = true }

# External vello_cpu
vello_cpu = { workspace = true }

[package.metadata.docs.rs]
features = ["pixels_window_renderer", "softbuffer_window_renderer"]