[package]
name = "winit-example"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
kurbo = { workspace = true }
winit = { workspace = true }
peniko = { workspace = true }
wgpu = { workspace = true }
anyrender = { workspace = true }
anyrender_vello = { workspace = true }
anyrender_vello_hybrid = { workspace = true }
anyrender_vello_cpu = { workspace = true, features = [
  "pixels_window_renderer",
  "softbuffer_window_renderer",
] }